vaultwarden/net/gateway_class.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: vaultwarden-gateway-class
spec:
  controllerName: vaultwarden.home/gateway-controller
